--- a/src/style.css
+++ b/src/style.css
@@ -4,10 +4,8 @@ body{
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    /* border: solid white 1px; */
     }
     header{
-        /* border: solid white 1px; */
         display: flex;
         align-content: center;
         flex-direction: column;
@@ -17,7 +15,6 @@ body{
     font-size: 60px;
     color:#07E7A3;
     text-align: center;
-    /* border: solid white 1px; */
     margin: 0%;
     }
     h2{
@@ -96,7 +93,6 @@ a {
         margin-right: auto;
         }
  main{
-         /* border: solid white 1px;  */
         display: flex;
         flex-direction: column;
         align-content: center;
@@ -107,11 +103,10 @@ a {
         } 
 #div1{
          display: inline-flex;
-         /* border: solid white 1px; */
         }
 #div1 p {
-        /* border: solid white 1px; */
-        color: white;
+        color: #8CE0BD;
+        font-size: 22px;
         width: 430px;
         padding-left: 4px;
         padding-bottom: 20px;
@@ -124,6 +119,7 @@ input{
         font-size: 5vh;
         text-align: center;
         border: solid yellow 1px;
+        border-radius: 5px;
         margin-left: auto;
         margin-right: auto;
         margin-top: 42px;
@@ -140,9 +136,9 @@ textarea{
     font-size: 3vh;
     }
     #change {
-        background-color: yellow;
+        background-color: #E71919;
         border-radius: 20px;
-        border: solid yellow 1px;
+        border: solid #C92D2D 1px;
         margin-top: auto;
         margin-bottom: auto;
         }
@@ -160,19 +156,19 @@ textarea{
         font-size: 4vh;
         text-align: center;
     }
-    #show1 {
-        background-color: red;
+    button:hover{
         color: white;
+    }
+    #show1 {
+        background-color: #0DCB92;
         border: none;
         }
     #show2{
     display: none;
-    background-color: red;
-    color: white;
+    background-color: #0DCB92;
     border: none;
     }
     #clear {
-        background-color:rgb(50, 136, 248);
-        color: white;
+        background-color:#DDE111;
         border: none;
         }
