--- a/src/style.css
+++ b/src/style.css
@@ -135,6 +135,9 @@ textarea{
     height: 300px;
     font-size: 3vh;
     }
+    textarea::placeholder{
+        font-size: 18px;
+    }
     #change {
         background-color: #E71919;
         border-radius: 20px;
