--- a/src/style.css
+++ b/src/style.css
@@ -4,31 +4,32 @@ body{
     justify-content: center;
     flex-direction: column;
     align-items: center;
+    height: 195vh;
     }
     header{
-        border: solid rgb(255, 0, 0);  
+        /* border: solid rgb(255, 0, 0);   */
         display: flex;
         align-items: center;
         flex-direction: column;
-        width: 100%;
+        width: 200vh;
+        height: 200vh;
     }
     h1{
-     /* border: solid white;  */
-    font-size: 360%;
+    /* border: solid white;   */
+    font-size: 8vh;
     color:#07E7A3;
     text-align: center;
-    margin-bottom: 1%;
+    margin-bottom: 1vh;
     }
     h2{
         /* border: solid white;  */
         text-align: center;
         color: white;
-        font-size: 90%;
-        width: 25%;
-        height: 140%;
+        font-size: 2.5vh;
+        width: 46vh;
         font-weight: normal;
-        padding: 1%;
-        margin-top: 1%;
+        padding: 1vh;
+        margin-top: 1vh;
       
     }
     section{
@@ -37,40 +38,39 @@ body{
         display: flex;
         justify-content: center;
         flex-direction: column;
-        width: 90%;
-        margin-top: 2%;
-        padding: 1%;
+        width: 180vh;
+        margin-top: 4vh;
+        padding: 2vh;
         }
         ul{
            /* border: solid rgb(208, 255, 0);    */
             list-style: none;
             display: flex;
-            width: 28%;
+            width: 48vh;
         }
  .guia{
-        /* border: solid white;      */
-        font-size: 130%;
+        /* border: solid white;  */
+        font-size: 3.5vh;
         color: white;
-        width: 55%;
-        padding: 5%;
-        line-height: 125%;
+        width: 30vh;
+        padding: 3vh;
+        line-height: 5vh;
         }
 .order{
      background-color: black; 
     color: white;
-    border-radius:50%;
-    width: 9%;
+    border-radius:8vh;
+    width: 5vh;
+    height: 5vh;
     text-align: center;
-    height: 22%;
-    line-height: 200%;
-     margin-top: 10%;
+    line-height: 5vh;
+     margin-top: 5vh;
     
 }
 h3{
-    /* border: solid white; */
+     /* border: solid white;  */
         text-align: center;
-        font-size: 150%;
-        display: inline;
+        font-size: 3.5vh;
         }
 #instrucciones{
         display: flex;
@@ -79,33 +79,33 @@ h3{
 a {
          text-align: center;
         text-decoration: none;
-        padding: 1%;
+        padding: 2.5vh;
         color: #0CC88F;
-        font-size: 110%;
-        border-radius: 15%;
+        font-size: 2.8vh;
+        border-radius: 6vh;
         background: #2B2C2C;
         border-color: #2B2C2C;
-        margin-top: 2%;
-        width: 8%;
+        margin-top: 4vh;
+        width: 18vh;
         }
  main{
-    border: solid white;
+    /* border: solid white; */
         display: flex;
         flex-direction: column;
         align-content: center;
-        justify-content: center;
-         width: 80%; 
-        padding: 4%;
-        margin-top: 6%;
+        justify-content: center; 
+        margin-top: 18vh;
+        width: 150vh;
+        height:80vh;
         } 
 #div1{
-         border: solid rgb(255, 11, 11);
+         /* border: solid rgb(255, 11, 11); */
          display: inline-flex;
          justify-content: space-around;
          align-items: baseline;
         }
 #div1 p {
-    border: solid rgb(26, 253, 6);
+    /* border: solid rgb(26, 253, 6); */
         color: #8CE0BD;
         font-size: 125%;
         padding: auto;
@@ -113,9 +113,10 @@ a {
         
         }        
 input{
-         width: 4%;
-        font-size: 200%;
-        border-radius: 50%;
+         width: 6vh;
+         height: 5vh;
+        font-size: 5vh;
+        border-radius: 6vh;
         border-color: white;
         }
         input::-webkit-inner-spin-button,
@@ -125,40 +126,42 @@ input{
         input::placeholder{
             color: rgb(27, 27, 27);
             text-align: center;
+            font-size: 4vh;
         }
 #container{
-    border: solid rgb(255, 0, 242);
+    /* border: solid rgb(255, 0, 242); */
         display: flex;
         align-content: center;
         justify-content: space-between;
+        height: 45vh;
         } 
         form{
-            border: solid rgb(140, 0, 255);
-            height: 800%;
+            /* border: solid rgb(140, 0, 255); */
+            height: 150vh;
         }
 textarea{
     display: block;
-    width: 430%;
-    height: 600%;
+    width: 65vh;
     font-size: 3vh;
+    height: 40vh;
     }
     textarea::placeholder{
-        font-size: 18px;
+        font-size: 3vh;
     }
     #change {
         background-color: #E71919;
-        border-radius: 20px;
-        border: solid #C92D2D 1px;
+        border-radius: 4vh;
+        border: solid #C92D2D;
         margin-top: auto;
         margin-bottom: auto;
         }
         #div2{
-            border: solid rgb(255, 0, 85);
+            /* border: solid rgb(255, 0, 85); */
             display: inline-flex;
             justify-content: space-between;
              padding: 10px;
-             width: 110px;
-             margin-left: 304px;
+             width: 15vh;
+             margin-left: 50vh;
             }
     button {
         width: 7vh;
