--- a/src/style.css
+++ b/src/style.css
@@ -187,11 +187,7 @@ textarea{
         border: none;
         }
 
-        @media only screen 
-  and (min-device-width: 414px) 
-  and (max-device-width: 736px) 
-  and (-webkit-min-device-pixel-ratio: 3)
-  and (orientation: portrait) { 
+@media (min-width: 320px) and (max-width: 700px) { 
       body{
           height: 480vh;
           width: 132vh;
