--- a/src/style.css
+++ b/src/style.css
@@ -278,8 +278,8 @@ textarea{
             #div2{
                 position: relative;
                 margin-top: 50vh;
-                width: 33vh;
-                margin-left: 9.5vh;
+                width: 30vw;
+                margin-left: 2vh;
                  
                 }
         button {
